feat: :sparkles: haproxy rate limit

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -16,9 +16,12 @@ defaults
     timeout server 300000
 
 frontend http-in
-   bind 0.0.0.0:3000
-   default_backend servers
+    bind 0.0.0.0:80
+    default_backend servers
 
 backend servers
-   bind-process 2
-   server app1 app1:3000 check inter 2000 rise 2 fall 5
+    bind-process 2
+    stick-table  type ip  size 100k  expire 30s  store http_req_rate(10s) #最近10秒鐘內每個客戶端最多允許20個請求
+    http-request track-sc0 src
+    http-request deny deny_status 429 if { sc_http_req_rate(0) gt 20 }
+    server dcarddrawcardfrontend dcarddrawcardfrontend:3000 check inter 2000 rise 2 fall 5 maxconn 30 #健康檢查/最多同時允許5個連線
