--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,17 @@ version: '3.7'
 
 services:
 
-  haproxy:
+  haproxy-dcard:
+    # build:
+    #   context: haproxy/.
+    #   dockerfile: ./Dockerfile
     image: haproxy
     volumes:
       - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
-    depends_on:
-      - dcarddrawcardfrontend
     ports:
       - 80:80
+    depends_on:
+      - dcarddrawcardfrontend
     networks:
       - frontend
 
@@ -52,7 +55,7 @@ services:
 
   redis-server:
     image: redis
-    # ports:
+    # ports: # 開放埠以供ＲＤＭ服務連線
     #   - 6379:6379
     networks:
       - backend
@@ -61,7 +64,7 @@ services:
     image: mongo
     volumes:
       - ./data:/data/db
-    # ports:
+    # ports: # 開放埠以供Ｒ3Ｔ服務連線
     #   - 27017:27017
     networks:
       - backend
