--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ mongoose-express-ts
 tdd-example-express
 data
 jmeter/compose
-.vscode
 .DS_Store
 *.log
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+# Local History for Visual Studio Code
+.history/
