--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@ jmeter/compose
 .DS_Store
 *.log
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 *.code-workspace
 # Local History for Visual Studio Code
 .history/
